更新音乐解密插件版本

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,7 +8,7 @@
     <link rel="bookmark" href="<%= BASE_URL %>favicon.png"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="/css/RobotoCss.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="/css/materialdesignicons.min.css">
   </head>
   <body>
     <noscript>
