--- a/Share/src/main/resources/static/v2/index.html
+++ b/Share/src/main/resources/static/v2/index.html
@@ -1,1 +1,36 @@
-<!DOCTYPE html><html lang=zh-CN><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel="shortcut icon" href=/v2/favicon.png><link rel=bookmark href=/v2/favicon.png><title>share-v2</title><link rel=stylesheet href=/css/RobotoCss.css><link rel=stylesheet href=/css/materialdesignicons.min.css><link href=/v2/css/about.fedd3d63.css rel=prefetch><link href=/v2/css/chunk-20ee4b34.daca5a6e.css rel=prefetch><link href=/v2/css/chunk-36b08e54.94e45d8b.css rel=prefetch><link href=/v2/css/chunk-f3ffd3ac.8d373bfb.css rel=prefetch><link href=/v2/js/about.0baff4c5.js rel=prefetch><link href=/v2/js/chunk-20ee4b34.dfaa8e79.js rel=prefetch><link href=/v2/js/chunk-36b08e54.d051dcfa.js rel=prefetch><link href=/v2/js/chunk-f3ffd3ac.4ec44680.js rel=prefetch><link href=/v2/css/app.5714621b.css rel=preload as=style><link href=/v2/css/chunk-vendors.e78a58d3.css rel=preload as=style><link href=/v2/js/app.a901bcb5.js rel=preload as=script><link href=/v2/js/chunk-vendors.d7537b72.js rel=preload as=script><link href=/v2/css/chunk-vendors.e78a58d3.css rel=stylesheet><link href=/v2/css/app.5714621b.css rel=stylesheet></head><body><noscript><strong>We're sorry but share-v2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/v2/js/chunk-vendors.d7537b72.js></script><script src=/v2/js/app.a901bcb5.js></script></body></html>
+<!DOCTYPE html>
+<html lang=zh-CN>
+
+<head>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href=/v2/favicon.png>
+    <link rel=bookmark href=/v2/favicon.png>
+    <title>share-v2</title>
+    <link rel=stylesheet href=/v2/css/RobotoCss.css>
+    <link rel=stylesheet href=/v2/css/materialdesignicons.min.css>
+    <link href=/v2/css/about.fedd3d63.css rel=prefetch>
+    <link href=/v2/css/chunk-20ee4b34.daca5a6e.css rel=prefetch>
+    <link href=/v2/css/chunk-36b08e54.94e45d8b.css rel=prefetch>
+    <link href=/v2/css/chunk-f3ffd3ac.8d373bfb.css rel=prefetch>
+    <link href=/v2/js/about.0baff4c5.js rel=prefetch>
+    <link href=/v2/js/chunk-20ee4b34.dfaa8e79.js rel=prefetch>
+    <link href=/v2/js/chunk-36b08e54.d051dcfa.js rel=prefetch>
+    <link href=/v2/js/chunk-f3ffd3ac.4ec44680.js rel=prefetch>
+    <link href=/v2/css/app.5714621b.css rel=preload as=style>
+    <link href=/v2/css/chunk-vendors.e78a58d3.css rel=preload as=style>
+    <link href=/v2/js/app.a901bcb5.js rel=preload as=script>
+    <link href=/v2/js/chunk-vendors.d7537b72.js rel=preload as=script>
+    <link href=/v2/css/chunk-vendors.e78a58d3.css rel=stylesheet>
+    <link href=/v2/css/app.5714621b.css rel=stylesheet>
+</head>
+
+<body><noscript><strong>We're sorry but share-v2 doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
+    <div id=app></div>
+    <script src=/v2/js/chunk-vendors.d7537b72.js></script>
+    <script src=/v2/js/app.a901bcb5.js></script>
+</body>
+
+</html>
